# ICDCS-DeepVis

./: README.md  bench_competitors_gcp.py  benchmark_safe.py  churn_real.json  churn_results.json  dummy.yar  experiment_churn_real.py  experiment_churn_sim.py  grid_search_design.py  local_bench_output.txt  plot_churn_combined.py  plot_churn_distribution.py  plot_final.py  verify_optimized.py
DeepVis_Project/: Cargo.toml  plot_figures.py
DeepVis_Project/src/: lib.rs
code/: Cargo.toml  analyze_entropy_debug.py  bench_final.py  bench_real.py  benchmark.py  benchmark_results.csv  binary_bench.py  check_entropy.py  churn.csv  churn_experiment.py  create_implant.py  cross_distro_bench.py  cross_os_full_results.json  deepvis.py  deepvis_comprehensive_results.json  deepvis_experiment.py  deepvis_fast.rs  deepvis_main.py  deepvis_production.py  deepvis_production_results.json  deepvis_scanner.rs  deploy_and_run.sh  exp_hyperscale_saturation.py  exp_icdcs_data_collection.py  exp_real_scalability.py  exp_roc_curve.py  exp_sensitivity_heatmap.py  experiment_simulation.py  fair_baseline_bench.py  final_evaluation_results.json  fullscale_evaluation_results.json  generate_real_byte_plots.py  generate_real_dilution_data.py  generate_real_heatmaps.py  generate_tall_entropy.py  grand_bench_full.py  grand_bench_v2.py  grand_malware_bench.py  hash_tradeoff_data.csv  hyperscale_saturation.csv  (+42 more)
code/GCP/: attack_azazel_full_metrics.csv  attack_azazel_metrics.csv  attack_diamorphine_full_metrics.csv  attack_diamorphine_metrics.csv  attack_final.csv  attack_miner_full_metrics.csv  (+22 more)
(+89 files in other folders)
